fix spacing issues in KeyColumn and UploadProgressModal

--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -40,6 +40,7 @@
     margin-bottom: 0;
     height: 30px;
     border: 1px solid #ccc9c9;
+    padding: 0;
   }
 
   .no-row-margin {
